<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clipToPadding="false"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <LinearLayout
    android:id="@+id/sampleInfoForm1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:divider="@color/colorDivider"
    android:dividerPadding="4dp"
    android:showDividers="middle">

    <eu.mignot.pathogentracker.component.MultiSpinner
      android:id="@+id/surveySampleTypes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:buttonText="@string/action_add_another"
      app:labelText="@string/sample_types"
      app:valuesResId="@array/sampleTypes"
      app:maxItems="3" />

    <eu.mignot.pathogentracker.component.MultiSpinner
      android:id="@+id/surveyTravelHistory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:orientation="vertical"
      app:buttonText="@string/action_add_another"
      app:labelText="@string/travel_history"
      app:valuesResId="@array/countries"
      app:maxItems="6" />

    <eu.mignot.pathogentracker.component.MultiSpinner
      android:id="@+id/surveyInfectionHistory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:orientation="vertical"
      app:buttonText="@string/action_add_another"
      app:labelText="@string/past_infections"
      app:valuesResId="@array/diseases"
      app:maxItems="3" />

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>
