<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clipToPadding="false"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <LinearLayout
    android:id="@+id/personalInfoForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/patientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/patient_id"
        android:maxLines="1"
        android:focusable="false"
        android:clickable="false"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/dateCollected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/survey_date"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/surveyLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/location_search"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/hint_location_collected"
        android:text="@string/tap_to_update_location"
        android:inputType="text"
        android:maxLines="1"/>

      <ProgressBar
        android:id="@+id/surveyLocationProgress"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/surveyLocation"
        android:layout_alignStart="@id/surveyLocation"
        android:layout_alignTop="@id/surveyLocation"
        android:indeterminate="true"
        android:visibility="gone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin">
      <TextView
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="12sp"
        />

      <RadioGroup
        android:id="@+id/patientGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <RadioButton
          android:layout_width="84dp"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/female"/>

        <RadioButton
          android:layout_width="84dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text="@string/male"/>

        <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text="@string/other"/>
      </RadioGroup>

    </RelativeLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginEnd="4dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="4dp"
      android:alpha="4"
      android:background="#000000"/>

    <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin">
      <TextView
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_the_subject_pregnant"
        android:textSize="12sp"
        />

      <RadioGroup
        android:id="@+id/patientIsPregnant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <RadioButton
          android:layout_width="84dp"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/yes"/>

        <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text="@string/no"/>
      </RadioGroup>

    </RelativeLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginEnd="4dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="4dp"
      android:alpha="4"
      android:background="#000000"/>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>
