...
        android:id="@+id/surveyCurrentDiseases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

      <Button
        android:id="@+id/surveyAddCurrentDisease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:paddingStart="8dp"
        android:text="@string/add_entry"
...
          android:text="@string/no"/>
      </RadioGroup>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatCheckBox
      android:id="@+id/surveyIsFlagged"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/survey_field_top_margin"
      android:text="@string/flag_this_survey_for_further_review"
      />

...
