...
  <string name="past_infections">Past infection(s)</string>
  <string name="travel_history">Recent travel history</string>
  <string name="save_success">Successfully saved</string>

  <string name="action_settings">Settings</string>
  <string name="action_sign_out">Sign out</string>
  <string name="action_save">Save</string>
  <string name="action_leave">Leave</string>
  <string name="action_stay">Stay</string>
  <string name="action_add_another">Add another</string>
  <string name="action_replace_photo">Replace photo</string>
  <string name="action_insert_photo">Take a photo</string>

...
  <string name="current_diseases">Current diseases</string>
  <string name="is_anyone_else_in_the_household_ill">Is anyone else in the household ill?</string>
  <string name="flag_this_survey_for_further_review">Flag this survey for further review?</string>
  <string name="batch_id">Batch ID</string>
  <string name="date_collected">Date Collected</string>
  <string name="location_collected">Location Collected</string>
  <string name="tap_to_update_location">Tap to update location</string>
  <string name="urban">Urban</string>
  <string name="suburban">Suburban</string>
  <string name="temperature_c">Temperature (Cº)</string>
  <string name="weather_conditions_eg_cloudy">Weather Conditions (eg. Cloudy)</string>
  <string name="remove">Remove</string>
  <string name="add_entry">Add Entry</string>
...
