<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/vectorBatchForm"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:orientation="vertical"
  android:descendantFocusability="beforeDescendants"
  android:focusableInTouchMode="true">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/batchId"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/batch_id"
      android:maxLines="1"
      android:focusable="false"
      android:clickable="false"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/survey_field_top_margin">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/batchDate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/date_collected"
      android:clickable="true"
      android:focusable="false"
      android:inputType="date"
      android:maxLines="1" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/survey_field_top_margin">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/batchLocation"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:drawableEnd="@drawable/location_search"
      android:clickable="true"
      android:focusable="false"
      android:hint="@string/location_collected"
      android:text="@string/tap_to_update_location"
      android:inputType="text"
      android:maxLines="1"/>

    <ProgressBar
      android:id="@+id/batchLocationProgress"
      style="@android:style/Widget.Material.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@id/batchLocation"
      android:layout_alignStart="@id/batchLocation"
      android:layout_alignTop="@id/batchLocation"
      android:indeterminate="true"
      android:visibility="gone"/>
  </android.support.design.widget.TextInputLayout>

  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/survey_field_top_margin">
    <TextView
      android:layout_marginStart="4dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/territory"
      android:textSize="12sp"
      />

    <RadioGroup
      android:id="@+id/batchTerritory"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:orientation="horizontal">

      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/urban"/>

      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/suburban"/>
    </RadioGroup>

  </RelativeLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:alpha="4"
    android:background="#000000"/>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/survey_field_top_margin">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/batchTemperature"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin"
      android:clickable="true"
      android:focusable="false"
      android:ems="10"
      android:hint="@string/temperature_c"
      android:inputType="numberSigned"
      android:maxLines="1"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/survey_field_top_margin">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/batchWeatherConditions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_field_top_margin"
      android:ems="10"
      android:hint="@string/weather_conditions_eg_cloudy"
      android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
      android:maxLines="5"/>
  </android.support.design.widget.TextInputLayout>

</LinearLayout>
